Pgaination added and configured helmet, .env, etc

--- a/.env
+++ b/.env
@@ -1,4 +1,6 @@
-TOKEN_SECRET='qsdcvbyjkl53ij rdszefghDFGYUJK758563'
+TOKEN='qsdcvbyjkl53ij rdszefghDFGYUJK758563'
 RAZORPAY_KEY_ID='rzp_test_VjdE45rvtrgef4'
 RAZORPAY_KEY_SECRET='znFJyRUNl65U93Begg7zXhNP'
 SENDGRID_API_KEY='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'
+DB_USER='root'
+DB_PASSWORD='password'
