--- a/.env
+++ b/.env
@@ -2,5 +2,9 @@ TOKEN='qsdcvbyjkl53ij rdszefghDFGYUJK758563'
 RAZORPAY_KEY_ID='rzp_test_VjdE45rvtrgef4'
 RAZORPAY_KEY_SECRET='znFJyRUNl65U93Begg7zXhNP'
 SENDGRID_API_KEY='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'
-DB_USER='root'
-DB_PASSWORD='password'
+DB_SCHEMA='ExpenseTracker'
+DB_USER='admin'
+DB_PASSWORD='Gautamraj873'
+DB_HOST='database-2.clbbz4gejvye.eu-north-1.rds.amazonaws.com'
+
+
